--- a/hao.html
+++ b/hao.html
@@ -906,13 +906,13 @@
             { "category": "A", "subcategory": "A1", "title": "免费资源社区", "description": "来自湾湾的免费资源分享网站", "link": "https://free.com.tw/", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
             { "category": "A", "subcategory": "A1", "title": "图像处理工具集", "description": "在线处理PDF-GIF-抠图-压缩等的图片工具", "link": "https://docsmall.com", "icon": "https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg" },
 
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
-            { category: 'B', subcategory: 'B1', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '站酷-字体', description: '站酷站内的字体设计师会在这里展示最新的设计作品', link: 'https://www.zcool.com.cn/discover?cate=8&subCate=14', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '图像处理工具集', description: '书法字典 搜汉字的各种书写风格', link: 'https://www.shufazidian.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '书法迷', description: '中国书法字典网收集整理大师毛笔字', link: 'http://www.shufami.com/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '字形演变', description: '可以查看汉字的演变过程', link: 'https://www.fantiz5.com/zixing/', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '字体传奇网', description: '分类收录各风格字体作品和素材', link: 'http://www.ziticq.com/Works', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: '字体江湖', description: '「字体帮」字体设计师刘兵克建立，会有很多字体设计师在此打卡练习', link: 'https://www.zitisheji.com', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
+            { category: 'B', subcategory: 'B1', title: 'CND设计网-字体灵感', description: 'CND设计网下的字体灵感搜索', link: 'http://ziti.cndesign.com/inspiration.html', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
 
             { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
             { category: 'B', subcategory: 'B2', title: '', description: '', link: '', icon: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/5j2Y/1.svg' },
