--- a/hao.html
+++ b/hao.html
@@ -666,7 +666,7 @@
 <body id="top">
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#top" class="logo">
+            <a href="https://www.zizao.top" class="logo">
                 <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/9BXx/1108X308/logo.png" alt="公司Logo" class="logo-image">
             </a>
 
@@ -675,11 +675,10 @@
             </div>
 
             <div class="nav-links" id="navLinks">
-                <a href="https://www.zizao.top" target="_blank">字造首页</a>
-                <a href="#top" class="active">设计导航</a>
-                <a href="#" target="_blank">字体导航</a>
-                <a href="#" target="_blank">工具导航</a>
-                <a href="#" target="_blank">书法导航</a>
+                <a href="https://www.zizao.top" target="_blank">首页</a>
+                <a href="https://www.zizao.top/fonts">字库产品</a>
+                <a href="https://www.zizao.top/superindex">字造超引</a>
+                <a href="" class="active">设计导航</a>
                 <a href="#" target="_blank">关于我们</a>
             </div>
         </div>
