--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     <!-- 顶部导航栏 -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="#top" class="logo">
+            <a href="https://www.zizao.top" class="logo">
                 <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/9BXx/1108X308/logo.png" alt="字造Logo" class="logo-image">
             </a>
             
@@ -699,10 +699,10 @@
             </div>
             
             <div class="nav-links" id="navLinks">
-                <a href="#" class="active">首页</a>
-                <a href="https://zizao.top/fonts" target="_blank">字体产品</a>
-                <a href="https://zzfonts.taobao.com" target="_blank">购买字体</a>
-                <a href="https://www.zizao.top/hao" target="_blank">设计导航</a>
+                <a href="" class="active">首页</a>
+                <a href="https://www.zizao.top/fonts">字库产品</a>
+                <a href="https://www.zizao.top/superindex">字造超引</a>
+                <a href="https://www.zizao.top/hao">设计导航</a>
                 <a href="#" target="_blank">关于我们</a>
             </div>
         </div>
