--- a/superindex.html
+++ b/superindex.html
@@ -853,9 +853,9 @@
             </div>
             
             <div class="nav-links" id="navLinks">
-                <a href="https://zizao.top">首页</a>
-                <a href="https://zizao.top/fonts">字库产品</a>
-                <a href="#" class="active">字造超引</a>
+                <a href="https://www.zizao.top">首页</a>
+                <a href="https://www.zizao.top/fonts">字库产品</a>
+                <a href="" class="active">字造超引</a>
                 <a href="https://www.zizao.top/hao">设计导航</a>
                 <a href="#" target="_blank">关于我们</a>
             </div>
