--- a/hao.html
+++ b/hao.html
@@ -282,8 +282,7 @@
             color: var(--gray-color);
             position: relative;
             margin-right: 0px;
-            border-top-left-radius: 8px; /* Added for better shape */
-            border-top-right-radius: 8px; /* Added for better shape */
+            border-radius: 8px;
             z-index: 0;
         }
 
