--- a/hao.html
+++ b/hao.html
@@ -41,7 +41,7 @@
         body {
             background-color: var(--background-light);
             color: var(--dark-color);
-            min-height: 100vh;
+            min-height: 10vh;
             line-height: 1.6;
             display: flex;
             flex-direction: column;
@@ -561,20 +561,28 @@
             }
             .categories {
                 display: flex;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
                 gap: 5px;
                 max-height: none;
                 padding: 0 15px;
-                overflow-y: visible;
+                overflow-x: auto;
+                overflow-y: hidden;
+                padding-bottom: 15px;
+                -ms-overflow-style: none; /* IE and Edge */
+                scrollbar-width: none; /* Firefox */
             }
             .categories::-webkit-scrollbar {
-                display: none;
+                display: none; /* Chrome, Safari, Opera*/
+            }
+            .categories li {
+                flex-shrink: 0;
             }
             .category-btn {
                 padding: 10px 15px;
                 padding-left: 20px;
                 font-size: 1rem;
                 min-height: 40px;
+                white-space: nowrap;
             }
             .category-btn.active::before {
                 left: 0;
@@ -586,13 +594,24 @@
                 padding: 20px;
             }
             .search-filters {
-                flex-wrap: wrap;
-                justify-content: center;
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            .search-filters::-webkit-scrollbar {
+                display: none;
+            }
+            .search-engine-btn {
+                flex-shrink: 0;
+                white-space: nowrap;
             }
             .search-input-wrapper {
                 width: 100%;
                 border-radius: 15px;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
                 justify-content: center;
                 padding: 12px 15px;
             }
@@ -600,10 +619,22 @@
                 width: 100%;
             }
             #search-button {
-                margin-top: 10px;
+                margin-top: 0;
             }
             .quick-links-area {
-                justify-content: center;
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            .quick-links-area::-webkit-scrollbar {
+                display: none;
+            }
+            .quick-link-btn {
+                flex-shrink: 0;
+                white-space: nowrap;
             }
             .cards-container {
                 grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -621,7 +652,7 @@
 
         @media (max-width: 768px) {
             .cards-container {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             }
             .sidebar {
                 padding: 20px 0;
@@ -639,6 +670,11 @@
                 overflow-x: auto;
                 padding-bottom: 10px;
                 flex-wrap: nowrap;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            .subcategory-tabs::-webkit-scrollbar {
+                display: none;
             }
             .subcategory-tab {
                 white-space: nowrap;
