--- a/hao.html
+++ b/hao.html
@@ -54,7 +54,7 @@
             width: 100%;
         }
         .nav-container {
-            max-width: 1200px;
+            max-width: 1500px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -645,8 +645,8 @@
             <div class="nav-links" id="navLinks">
                 <a href="https://www.zizao.top" target="_blank">首页</a>
                 <a href="https://www.zizao.top/fonts">字库产品</a>
-                <a href="https://www.zizao.top/superindex">字造超引</a>
-                <a href="" class="active">设计导航</a>
+                <a href="https://www.zizao.top/tools">设计百宝库</a>
+                <a class="active">设计导航</a>
                 <a href="#" target="_blank">关于我们</a>
             </div>
         </div>
@@ -655,7 +655,7 @@
         <div class="container">
             <div class="sidebar" id="sidebar">
                 <div class="sidebar-header">
-                    <div class="custom-logo" onclick="window.open('https://www.zizaotop/hao', '_blank')">
+                    <div class="custom-logo" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
                         <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/2tE5/219X79/haologo.png" alt="haoLogo">
                     </div>
                 </div>
@@ -847,7 +847,7 @@
     <div class="footer">
         <p>© 2025 字造设计导航 | 已收录 400+ 优质设计网站</p>
     </div>
-    <script src="cardData.js"></script>
+    <script src="pages/cardData.js"></script>
     <script>
         const appConfig = {
             categories: ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J'],
