--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             gap: 25px;
             margin-bottom: 30px;
             position: relative;
+            flex-wrap: wrap; /* 确保图标能换行 */
         }
 
         .social-links a {
@@ -560,6 +561,10 @@
             }
             .main-content {
                 padding-bottom: 50px;
+            }
+            /* 优化：在更小屏幕上减小社交图标的间距，防止横向滚动条 */
+            .social-links {
+                gap: 15px; 
             }
         }
     </style>
