--- a/fonts/index.html
+++ b/fonts/index.html
@@ -922,7 +922,7 @@
                     description: '我们第一款双轴可变字体，第一款免费商用字体即将上线',
                     tags: ['免费商用', '双轴可变'],
                     category: '免费商用',
-                    link: 'https://www.zizao.top/pages/betas'
+                    link: 'https://www.zizao.top/fonts/beta'
                 },
                 {
                     imageUrl: 'https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/JLkB/750X360/1.jpg',
@@ -930,7 +930,7 @@
                     description: '点击了解我们的开发计划',
                     tags: ['后续开发计划'],
                     category: '开发计划',
-                    link: 'https://www.zizao.top/pages/beta'
+                    link: 'https://www.zizao.top/fonts/beta'
                 },
 
             ];
