--- a/hao.html
+++ b/hao.html
@@ -27,7 +27,7 @@
             --transition-color-bg: all 0.3s ease;
             --background-light: #f4f6f8;
             --divider-color: #e0e0e0;
-            --card-bg-color: #f8f8f8;
+            --card-bg-color: #ffffff; /* 更改为白色以增强对比 */
             --card-hover-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
         }
         * {
@@ -115,7 +115,7 @@
             position: relative;
         }
         .sidebar {
-            width: 280px;
+            width: 250px;
             flex-shrink: 0;
             background: white;
             border-radius: var(--border-radius);
@@ -126,6 +126,7 @@
             display: flex;
             flex-direction: column;
             padding-bottom: 20px;
+            transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
         }
         .sidebar-header {
             padding: 25px;
@@ -178,7 +179,7 @@
             display: flex;
             align-items: center;
             padding: 14px 15px;
-            padding-left: 20px;
+            padding-left: 36px;
             text-decoration: none;
             color: var(--dark-color);
             font-size: 1.05rem;
@@ -189,17 +190,28 @@
             margin-bottom: 5px;
             min-height: 50px;
             line-height: 1.2;
+            background-color: #F6F6F6;
+            margin-bottom: 5px;
+            border-radius: 8px;
         }
         .category-btn::before {
-            content: none;
+            content: '▪';
+            position: absolute;
+            left: 15px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #929292;
+            font-size: 1.2em;
+            line-height: 1;
+            transition: none;
         }
         .category-btn:hover {
-            background: #f8f9ff;
-            color: var(--primary-color);
+            background-color: #EFEFEF;
+            color: var(--dark-color);
         }
         .category-btn.active {
-            background: #f0f4ff;
-            color: var(--primary-color);
+            background-color: rgba(255, 140, 25, 0.1);
+            color: var(--dark-color);
             font-weight: 600;
             position: relative;
         }
@@ -209,11 +221,12 @@
             left: 0;
             top: 50%;
             transform: translateY(-50%);
-            width: 4px;
-            height: 70%;
+            width: 6px;
+            height: 80%;
             background: var(--primary-color);
-            border-radius: 2px;
+            border-radius: 3px;
             transition: none;
+            box-shadow: 0 0 10px rgba(255, 140, 25, 0.5);
         }
         .content {
             flex: 1;
@@ -366,35 +379,36 @@
         }
         .cards-container {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* 恢复为原始布局 */
             gap: 20px;
         }
         .card {
-            background: var(--card-bg-color);
+            background: var(--card-bg-color); /* 保留新的白色背景 */
             border-radius: var(--border-radius);
+            border: 1px solid #f0f0f0; /* 保留边框 */
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             overflow: hidden;
-            transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
-            padding: 15px;
+            padding: 15px; /* 恢复为原始内边距 */
             cursor: pointer;
             align-items: center;
         }
         .card:hover {
             transform: translateY(-5px);
-            box-shadow: var(--card-hover-shadow);
-            background: #f8f8f8;
+            box-shadow: 0 12px 25px rgba(0, 0, 0, 0.1);
+            background: var(--light-color); /* 保留新的悬停背景色 */
         }
         .card-icon {
-            width: 50px;
-            height: 50px;
+            width: 50px; /* 恢复为原始图标尺寸 */
+            height: 50px; /* 恢复为原始图标尺寸 */
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-right: 15px;
+            margin-right: 15px; /* 恢复为原始间距 */
             flex-shrink: 0;
             overflow: hidden;
-            border-radius: 12px;
+            border-radius: 12px; /* 恢复为原始圆角 */
         }
         .card-icon img {
             width: 100%;
@@ -408,20 +422,27 @@
             flex: 1;
         }
         .card h3 {
-            font-size: 1.1rem;
-            margin-bottom: 5px;
+            font-size: 1.1rem; /* 恢复为原始标题字体大小 */
+            margin-bottom: 5px; /* 恢复为原始间距 */
             color: var(--secondary-color);
+            font-weight: 600;
+            transition: color 0.3s ease;
         }
         .card p {
-            color: var(--gray-color);
+            color: #5a5a5a;
             line-height: 1.5;
-            font-size: 0.88rem;
+            font-size: 0.88rem; /* 恢复为原始描述字体大小 */
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
             text-overflow: ellipsis;
             min-height: calc(1.5 * 2 * 0.88rem);
+            transition: color 0.3s ease;
+        }
+        .card:hover h3,
+        .card:hover p {
+            color: var(--dark-color);
         }
         .footer {
             text-align: center;
@@ -433,9 +454,139 @@
         .hidden {
             display: none;
         }
-        @media (max-width: 768px) {
-            .nav-container {
-                position: relative;
+        /* Mobile-first Sidebar and Overlay */
+        .mobile-sidebar-toggle {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            z-index: 150;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: white;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            border: none;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+            color: var(--primary-color);
+            font-size: 1.3rem;
+        }
+        .mobile-sidebar-toggle:hover {
+            transform: scale(1.1);
+        }
+        .mobile-sidebar-toggle i {
+            pointer-events: none;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 199;
+            transition: opacity 0.3s ease-in-out;
+            opacity: 0;
+        }
+        .overlay.show {
+            display: block;
+            opacity: 1;
+        }
+        /* Mobile responsive styles */
+        @media (max-width: 1200px) {
+            .container {
+                flex-direction: column;
+            }
+            .sidebar {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 80%;
+                max-width: 350px;
+                height: 100%;
+                z-index: 200;
+                transform: translateX(-100%);
+                visibility: hidden;
+                box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
+                border-radius: 0;
+                padding-bottom: 0;
+                overflow-y: auto;
+            }
+            .sidebar.show {
+                transform: translateX(0);
+                visibility: visible;
+            }
+            .sidebar-header {
+                padding-bottom: 15px;
+            }
+            .custom-logo {
+                height: 70px;
+                margin-bottom: 10px;
+            }
+            .categories {
+                max-height: calc(100vh - 150px);
+                overflow-x: hidden;
+                padding: 0 15px;
+            }
+            .mobile-sidebar-toggle {
+                display: block;
+            }
+            .search-area {
+                margin-bottom: 20px;
+                padding: 20px;
+            }
+            .search-filters {
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            .search-filters::-webkit-scrollbar {
+                display: none;
+            }
+            .search-engine-btn {
+                flex-shrink: 0;
+                white-space: nowrap;
+            }
+            .search-input-wrapper {
+                width: 100%;
+                border-radius: 15px;
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                padding: 12px 15px;
+            }
+            #search-input {
+                flex-grow: 1;
+                width: auto;
+            }
+            #search-button {
+                width: auto;
+                margin-top: 0;
+            }
+            .quick-links-area {
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                overflow-x: auto;
+                padding-bottom: 10px;
+                -ms-overflow-style: none;
+                scrollbar-width: none;
+            }
+            .quick-links-area::-webkit-scrollbar {
+                display: none;
+            }
+            .quick-link-btn {
+                flex-shrink: 0;
+                white-space: nowrap;
+            }
+            .cards-container {
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            }
+            .category-section h2 {
+                font-size: 1.6rem;
             }
             .menu-toggle {
                 display: block;
@@ -468,117 +619,14 @@
                 display: none;
             }
         }
-        @media (min-width: 769px) {
+        @media (min-width: 1201px) {
             .menu-toggle {
-                display: none;
+                display: none !important;
             }
             .nav-links {
                 max-height: none !important;
                 overflow: visible !important;
                 padding: 0 !important;
-            }
-        }
-        @media (max-width: 1200px) {
-            .container {
-                flex-direction: column;
-            }
-            .sidebar {
-                width: 100%;
-                position: static;
-                margin-bottom: 15px; /* 调整间距 */
-                padding-bottom: 0;
-            }
-            .sidebar-header {
-                padding-bottom: 15px;
-            }
-            .custom-logo {
-                height: 70px;
-                margin-bottom: 10px;
-            }
-            .categories {
-                display: flex;
-                flex-wrap: nowrap;
-                gap: 5px;
-                max-height: none;
-                padding: 0 15px;
-                overflow-x: auto;
-                overflow-y: hidden;
-                padding-bottom: 15px;
-                -ms-overflow-style: none; /* IE and Edge */
-                scrollbar-width: none; /* Firefox */
-            }
-            .categories::-webkit-scrollbar {
-                display: none; /* Chrome, Safari, Opera*/
-            }
-            .categories li {
-                flex-shrink: 0;
-            }
-            .category-btn {
-                padding: 10px 15px;
-                padding-left: 20px;
-                font-size: 1rem;
-                min-height: 40px;
-                white-space: nowrap;
-            }
-            .category-btn.active::before {
-                left: 0;
-                width: 3px;
-                height: 60%;
-            }
-            .search-area {
-                margin-bottom: 20px;
-                padding: 20px;
-            }
-            .search-filters {
-                flex-wrap: nowrap;
-                justify-content: flex-start;
-                overflow-x: auto;
-                padding-bottom: 10px;
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-            }
-            .search-filters::-webkit-scrollbar {
-                display: none;
-            }
-            .search-engine-btn {
-                flex-shrink: 0;
-                white-space: nowrap;
-            }
-            .search-input-wrapper {
-                width: 100%;
-                border-radius: 15px;
-                flex-wrap: nowrap;
-                justify-content: flex-start; /* 按钮靠右 */
-                padding: 12px 15px;
-            }
-            #search-input {
-                flex-grow: 1; /* 占据剩余空间 */
-                width: auto;
-            }
-            #search-button {
-                width: auto;
-                margin-top: 0;
-            }
-            .quick-links-area {
-                flex-wrap: nowrap;
-                justify-content: flex-start;
-                overflow-x: auto;
-                padding-bottom: 10px;
-                -ms-overflow-style: none;
-                scrollbar-width: none;
-            }
-            .quick-links-area::-webkit-scrollbar {
-                display: none;
-            }
-            .quick-link-btn {
-                flex-shrink: 0;
-                white-space: nowrap;
-            }
-            .cards-container {
-                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            }
-            .category-section h2 {
-                font-size: 1.6rem;
             }
         }
         @media (max-width: 992px) {
@@ -844,6 +892,10 @@
             </div>
         </div>
     </div>
+    <button id="mobile-sidebar-toggle" class="mobile-sidebar-toggle">
+        <i class="fas fa-list-ul"></i>
+    </button>
+    <div class="overlay" id="sidebar-overlay"></div>
     <div class="footer">
         <p>© 2025 字造设计导航 | 已收录 400+ 优质设计网站</p>
     </div>
@@ -878,6 +930,9 @@
         };
         const menuToggle = document.getElementById('menuToggle');
         const navLinks = document.getElementById('navLinks');
+        const mobileSidebarToggle = document.getElementById('mobile-sidebar-toggle');
+        const sidebar = document.getElementById('sidebar');
+        const sidebarOverlay = document.getElementById('sidebar-overlay');
         function toggleMobileMenu() {
             navLinks.classList.toggle('active');
             const icon = menuToggle.querySelector('i');
@@ -889,11 +944,34 @@
                 icon.classList.add('fa-bars');
             }
         }
+        function toggleSidebar() {
+            sidebar.classList.toggle('show');
+            sidebarOverlay.classList.toggle('show');
+            const icon = mobileSidebarToggle.querySelector('i');
+            if (sidebar.classList.contains('show')) {
+                icon.classList.remove('fa-list-ul');
+                icon.classList.add('fa-times');
+            } else {
+                icon.classList.remove('fa-times');
+                icon.classList.add('fa-list-ul');
+            }
+        }
+        function closeSidebar() {
+            sidebar.classList.remove('show');
+            sidebarOverlay.classList.remove('show');
+            const icon = mobileSidebarToggle.querySelector('i');
+            icon.classList.remove('fa-times');
+            icon.classList.add('fa-list-ul');
+        }
         function handleResize() {
-            if (window.innerWidth > 768) {
+            if (window.innerWidth > 1200) {
                 navLinks.classList.remove('active');
                 menuToggle.querySelector('i').classList.remove('fa-times');
                 menuToggle.querySelector('i').classList.add('fa-bars');
+                sidebar.classList.remove('show');
+                sidebarOverlay.classList.remove('show');
+                mobileSidebarToggle.querySelector('i').classList.remove('fa-times');
+                mobileSidebarToggle.querySelector('i').classList.add('fa-list-ul');
             }
         }
         function renderCards(cardsData, containerId) {
@@ -995,6 +1073,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             initializeUI();
             menuToggle.addEventListener('click', toggleMobileMenu);
+            mobileSidebarToggle.addEventListener('click', toggleSidebar);
+            sidebarOverlay.addEventListener('click', closeSidebar);
             window.addEventListener('resize', handleResize);
             window.addEventListener('scroll', highlightCategoryOnScroll);
             highlightCategoryOnScroll();
@@ -1002,6 +1082,7 @@
                 const targetButton = e.target.closest('.category-btn');
                 if (!targetButton) return;
                 e.preventDefault();
+                closeSidebar();
                 this.querySelectorAll('.category-btn').forEach(btn => btn.classList.remove('active'));
                 targetButton.classList.add('active');
                 const targetSection = document.querySelector(targetButton.getAttribute('href'));
